--- a/src/style.css
+++ b/src/style.css
@@ -1,24 +1,24 @@
 
-/* Reset some default browser styles */
+
 body, h1, p {
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-/* Add a background color to the page */
+
 body {
   background: #f2f2f2;
 }
 
-/* Container holding our layout */
+
 .container {
   display: flex;
   flex-direction: column;
   min-height: 100vh; /* 100% of the viewport height */
 }
 
-/* Header */
+
 .header {
   background-color: #2b2b2b;
   color: white;
@@ -26,13 +26,13 @@ body {
   padding: 1em;
 }
 
-/* Flexbox container for main content */
+
 .content {
   flex: 1; /* takes up the remaining space */
   display: flex;
 }
 
-/* Sidebar */
+
 .sidebar {
   background-color: #636363;
   color: white;
@@ -40,17 +40,47 @@ body {
   padding: 1em;
 }
 
-/* Main content area */
+
 .main {
   flex: 1; /* takes up the remaining space */
   background-color: rgb(230, 230, 230);
   padding: 1em;
 }
 
-/* Footer */
+
 .footer {
   background-color: #313131;
   color: white;
   text-align: center;
   padding: 1em;
 }
+
+
+
+.sidebar {
+    width: 300px;
+    background-color: #333;
+    color: white;
+    padding: 15px;
+  }
+  
+  .sidebar-item, .sidebar-section-title {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    cursor: pointer;
+  }
+  
+  .sidebar-item i, .sidebar-section-title i {
+    margin-right: 10px;
+  }
+  
+  .sidebar-section-title {
+    margin-top: 20px;
+    font-weight: bold;
+  }
+  
+  .add-project {
+    margin-top: 20px;
+  }
+  
