--- a/src/style.css
+++ b/src/style.css
@@ -33,12 +33,7 @@ body {
 }
 
 
-.sidebar {
-  background-color: #636363;
-  color: white;
-  width: 300px;
-  padding: 1em;
-}
+
 
 
 .main {
@@ -56,13 +51,13 @@ body {
 }
 
 
-
 .sidebar {
-    width: 300px;
-    background-color: #333;
+    background-color: #636363;
     color: white;
-    padding: 15px;
+    width: 300px;
+    padding: 1em;
   }
+
   
   .sidebar-item, .sidebar-section-title {
     display: flex;
@@ -82,5 +77,24 @@ body {
   
   .add-project {
     margin-top: 20px;
+  }
+  
+
+  .project-input {
+    width: 90%;
+    margin: 10px 0;
+    padding: 8px;
+  }
+  
+  .save-project, .cancel-project {
+    background-color: green;
+    color: white;
+    margin: 5px;
+    padding: 10px;
+    cursor: pointer;
+  }
+  
+  .cancel-project {
+    background-color: red;
   }
   
